k8s/go-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-albums
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-albums
  template:
    metadata:
      labels:
        app: go-albums
    spec:
      containers:
        - name: go-albums
          image: ghcr.io/hijazp/go-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /albums
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /albums
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
