k8s/go-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-albums-svc
  namespace: apps
spec:
  selector:
    app: go-albums
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
