k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: apps.test
      http:
        paths:
          - path: /albums
            pathType: Prefix
            backend:
              service:
                name: go-albums-svc
                port:
                  number: 8080
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: express-svc
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: express-svc
                port:
                  number: 3000
